fixed line spacing

--- a/chicago/css/style.css
+++ b/chicago/css/style.css
@@ -59,9 +59,9 @@ h8 {
 }
 
 .small-spacer {
-    height: 25px;
+    height: 30px;
 }
 
 .med-spacer {
-    height: 70px;
+    height: 65px;
 }
